--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
     "@types/node": "17.0.31",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.15.0",
+    "eslint": "^8.15.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
