--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.29.4",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
+    "react-div-100vh": "^0.7.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
